--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <!-- Portfolio Content -->
         <div class="portfolio-content">
             <div class="portfolio-box">
-               <img src="portfolio-1.webp" alt="portfolio-1" class="portfolio-img">
+               <img src="portfolio-1.jpg" alt="portfolio-1" class="portfolio-img">
                 <!-- Overlay -->
                 <div class="portfolio-overlay">
                     <h2>Web Development</h2>
