--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
                 <h3>Hello</h3>
                 <h2>I'm <span class="color">Alishba</span></h2>
                 <p>
-                    Passionate web developer with <span class="color">Software Engineering</span> in Progress from PUCIT, aspiring to be <span class="color">a full-stack web developer </span>
-                    who loves networking and learns new technologies every day
-                    <br>Here's a bit more <span class="color">about me.</span>
+                    I'm an enthusiastic web developer holding a degree in <span class="color">Software Engineering</span>  from PUCIT. My experience includes working with a variety of programming languages and technologies, such as <span class="color">JavaScript, C++, MySQL, PHP, HTML, and CSS </span>. Additionally, I've actively contributed to the analysis and design phases of various projects.
+                    Here's a bit more <span class="color">about me.</span>
                 </p>
                 <!-- Social -->
                 <div class="social">
@@ -140,7 +139,7 @@
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Freelancing</h2>
-                     <a href="#">
+                     <a href="https://www.fiverr.com/s/GrBEoZ">
                          <i class="bx bx-link-alt"></i>
                      </a>
                  </div>
@@ -164,15 +163,15 @@
         <!-- Projects Content -->
         <div class="projects-content">
             <div class="project-box">
-                <h2>285+</h2>
+                <h2>12+</h2>
                 <span>Projects Completed</span>
             </div>
             <div class="project-box">
-                <h2>190+</h2>
+                <h2>10+</h2>
                 <span>Websites Developed</span>
             </div>
             <div class="project-box">
-                <h2>200+</h2>
+                <h2>0+</h2>
                 <span>Happy Clients</span>
             </div>
         </div>
