--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h3>Hello</h3>
                 <h2>I'm <span class="color">Alishba</span></h2>
                 <p>
-                    I'm an enthusiastic web developer holding a degree in <span class="color">Software Engineering</span>  from PUCIT. My experience includes working with a variety of programming languages and technologies, such as <span class="color">JavaScript, C++, MySQL, PHP, HTML, and CSS </span>. Additionally, I've actively contributed to the analysis and design phases of various projects.
+                    I'm an enthusiastic web developer holding a degree in <span class="color">Software Engineering</span>  from PUCIT. My experience includes working with a variety of programming languages and technologies, such as <span class="color">JavaScript, React, NodeJs C++, MySQL, PHP, HTML, and CSS </span>. Additionally, I've actively contributed to the analysis and design phases of various projects.
                     Here's a bit more <span class="color">about me.</span>
                 </p>
                 <!-- Social -->
@@ -82,7 +82,7 @@
             </div>
             <div class="about-text">
                 <p>Hello! I am Alishba Siddique. Web Developer and Software Engineer.</p>
-                <p>A final year Software Engineer student, currently looking for jobs & free lancing opportunities</p>
+                <p>A Fresh Graduate Software Engineer from PUCIT, currently looking for jobs & freelancing opportunities</p>
                 <p>Get your project done with contact button</p>
             </div>
     </section>
@@ -94,17 +94,17 @@
             <div class="services-box">
                 <i class='bx bx-code-alt' ></i>
                 <h2>Web Development</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores eius voluptatibus doloribus, consequuntur, est recusandae beatae quam obcaecati optio quos amet repudiandae facilis rem, officia in doloremque? Dolore, itaque accusamus.</p>
+                <p>MERN Stack</p>
             </div>
             <div class="services-box">
                 <i class='bx bx-laptop' ></i>
                 <h2>Software Engineering</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores eius voluptatibus doloribus, consequuntur, est recusandae beatae quam obcaecati optio quos amet repudiandae facilis rem, officia in doloremque? Dolore, itaque accusamus.</p>
+                <p>from PUCIT</p>
             </div>
             <div class="services-box">
                 <i class='bx bx-money' ></i>
                 <h2>Freelancing</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores eius voluptatibus doloribus, consequuntur, est recusandae beatae quam obcaecati optio quos amet repudiandae facilis rem, officia in doloremque? Dolore, itaque accusamus.</p>
+                <p>Fiver</p>
             </div>
         </div>
     </section>
@@ -119,7 +119,7 @@
                 <!-- Overlay -->
                 <div class="portfolio-overlay">
                     <h2>Web Development</h2>
-                    <a href="#">
+                    <a href="https://github.com/Alishba-Siddique?tab=repositories">
                         <i class="bx bx-link-alt"></i>
                     </a>
                 </div>
@@ -129,7 +129,7 @@
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Software Engineering</h2>
-                     <a href="#">
+                     <a href="https://github.com/bsef19a007">
                          <i class="bx bx-link-alt"></i>
                      </a>
                  </div>
@@ -149,7 +149,7 @@
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Others</h2>
-                     <a href="#">
+                     <a href="https://github.com/Alishba-Siddique">
                          <i class="bx bx-link-alt"></i>
                      </a>
                  </div>
