--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <!-- Overlay -->
                 <div class="portfolio-overlay">
                     <h2>Web Development</h2>
-                    <a href="https://github.com/Alishba-Siddique?tab=repositories">
+                    <a href="https://github.com/Alishba-Siddique?tab=repositories" target="_blank">
                         <i class="bx bx-link-alt"></i>
                     </a>
                 </div>
@@ -129,7 +129,7 @@
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Software Engineering</h2>
-                     <a href="https://github.com/bsef19a007">
+                     <a href="https://github.com/bsef19a007" target="_blank">
                          <i class="bx bx-link-alt"></i>
                      </a>
                  </div>
@@ -139,7 +139,7 @@
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Freelancing</h2>
-                     <a href="https://www.fiverr.com/s/GrBEoZ">
+                     <a href="https://www.fiverr.com/s/GrBEoZ" target="_blank">
                          <i class="bx bx-link-alt"></i>
                      </a>
                  </div>
@@ -149,7 +149,7 @@
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Others</h2>
-                     <a href="https://github.com/Alishba-Siddique">
+                     <a href="https://github.com/Alishba-Siddique" target="_blank">
                          <i class="bx bx-link-alt"></i>
                      </a>
                  </div>
