--- a/index.html
+++ b/index.html
@@ -163,25 +163,25 @@
         <!-- Projects Content -->
         <div class="projects-content">
             <div class="project-box">
-                <h2>12+</h2>
+                <h2>100+</h2>
                 <span>Projects Completed</span>
             </div>
             <div class="project-box">
-                <h2>10+</h2>
+                <h2>100+</h2>
                 <span>Websites Developed</span>
             </div>
-            <div class="project-box">
+           <!-- <div class="project-box">
                 <h2>0+</h2>
                 <span>Happy Clients</span>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Reviews -->
-    <section class="container reviews" id="reviews">
+   <!-- <section class="container reviews" id="reviews"> -->
         <!-- Heading -->
-        <h2 class="heading">Reviews</h2>
+       <!-- <h2 class="heading">Reviews</h2> -->
         <!-- Review Content -->
-        <div class="reviews-content swiper">
+       <!-- <div class="reviews-content swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="review-box">
@@ -228,7 +228,7 @@
             
         </div>
     </div>
-    </section>
+    </section> -->
     <!-- Contact Form -->
     <section class="contact container" id="contact">
         <!-- Heading -->
