--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="portfolio-2.webp" alt="portfolio-1" class="portfolio-img">
+                <video width="320" height="240" controls class="portfolio-img"><source src="portfolio-2.mp4" type="video/mp4"></video> 
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Software Engineering</h2>
@@ -135,7 +135,7 @@
                  </div>
              </div>
              <div class="portfolio-box">
-                <img src="portfolio-3.webp" alt="portfolio-1" class="portfolio-img">
+                <img src="portfolio-3.jpeg" alt="portfolio-3" class="portfolio-img">
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Freelancing</h2>
@@ -145,7 +145,7 @@
                  </div>
              </div>
              <div class="portfolio-box">
-                <img src="portfolio-4.webp" alt="portfolio-1" class="portfolio-img">
+                <img src="portfolio-4.png" alt="portfolio-4" class="portfolio-img">
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Others</h2>
