--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <video width="320" height="240" controls class="portfolio-img"><source src="portfolio-2.mp4" type="video/mp4"></video> 
+                <video width="320" height="240" class="portfolio-img"><source src="portfolio-2.mp4" type="video/mp4" alt="portfolio-2" ></video> 
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Software Engineering</h2>
