--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
                 <h2>100+</h2>
                 <span>Websites Developed</span>
             </div>
-           <!-- <div class="project-box">
-                <h2>0+</h2>
+           <div class="project-box">
+                <h2>100+</h2>
                 <span>Happy Clients</span>
-            </div> -->
+            </div> 
         </div>
     </section>
     <!-- Reviews -->
