--- a/index.html
+++ b/index.html
@@ -154,6 +154,24 @@
                      </a>
                  </div>
              </div>
+            <div class="portfolio-box">
+                <!-- Put this code anywhere in the body of your page where you want the badge to show up. -->
+
+<div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget' style='display: inline-block;'>
+     <a itemprop='url' href=https://www.fiverr.com/alishba_siddiq rel="nofollow" target="_blank" style='display: inline-block;'>
+        <div class='fiverr-seller-content' id='fiverr-seller-widget-content-426792db-5c65-4297-923d-dfd617dc634f' itemprop='contentURL' style='display: none;'></div>
+        <div id='fiverr-widget-seller-data' style='display: none;'>
+            <div itemprop='name' >alishba_siddiq</div>
+            <div itemscope itemtype='http://schema.org/Organization'><span itemprop='name'>Fiverr</span></div>
+            <div itemprop='jobtitle'>Seller</div>
+            <div itemprop='description'>As a skilled web developer with expertise in React, JavaScript, HTML, CSS, and Node, I can help bring your digital ideas to life. With over 2 years of experience in the industry, I have worked on a wide range of projects, from simple landing pages to complex web applications.</div>
+        </div>
+    </a>
+</div>
+
+<script id='fiverr-seller-widget-script-426792db-5c65-4297-923d-dfd617dc634f' src='https://widgets.fiverr.com/api/v1/seller/alishba_siddiq?widget_id=426792db-5c65-4297-923d-dfd617dc634f' data-config='{"category_name":"\n                                    Programming \u0026 Tech\n\n                            "}' async='true' defer='true'></script>
+
+             </div>
         </div>
     </section>
     <!-- Projects -->
