--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                  <!-- Overlay -->
                  <div class="portfolio-overlay">
                      <h2>Software Engineering</h2>
-                     <a href="https://github.com/bsef19a007" target="_blank">
+                     <a href="https://github.com/Alishba-Siddique" target="_blank">
                          <i class="bx bx-link-alt"></i>
                      </a>
                  </div>
